--- a/css/magazine.css
+++ b/css/magazine.css
@@ -17,6 +17,7 @@ body{
 	padding:0;
 	background: #1d1d1d;
 }
+
 #canvas{
 	background-color: none ;
 	background-image: linear-gradient(147deg, rgba(255, 255, 255, 1) 50%, rgba(0, 0, 0, 0.2) 95%);
@@ -818,10 +819,42 @@ video{
 	z-index: 99;
 	width: 50px;
 	opacity: 0.8;
+	
 }
 
-@media(max-width:1400px){
+
+.responsive-icons{
+	display: none;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	position: absolute;
+
+	top: 0;                   /* Posición desde la parte superior */
+    left: 50%;                /* Centrado horizontal respecto al viewport */
+    transform: translateX(-50%); /* Ajuste de centrado */
+	z-index: 99;
+	height: 100px;
+	width: 300px;
+	opacity: 0.8;
+	border: 2px solid rgb(147, 201, 21);
+	border-radius: 10px;
+	background:rgba(132, 207, 11, 0.5);
+	position: fixed;
+}
+.responsive-icons .r-icon img{
 	
+	width: 3rem;
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
+}
+
+
+
+@media(max-width:1400px){
+	.responsive-icons{
+		display: flex;
+	}
 	#copy{
 		display: none;
 	}
@@ -836,29 +869,42 @@ video{
 
 	}
 	.magazine-viewport .previous-button{
-		width:5rem !important;
+		width:3rem !important;
 		height:2rem !important;
 		position:fixed !important;
 		bottom: 0 !important;
 		z-index: 999;
-		transform: translate(-100%, 950%) !important;
-		background: #053803;
-		
+		transform: translate(-110%, 950%) !important;
+		/* background: red; */
+		background: linear-gradient(135deg, #759e06 0%, #a5c667 100%);
+		clip-path: polygon(
+			100% 0%,         
+			15% 35%,        
+			10% 50%,          
+			15% 65%,         
+			100% 100%        
+		);
+		border-radius: 20%;
 	}
+				
 	
 	.magazine-viewport .next-button{
-		width:5rem !important;
+		width:3rem !important;
 		height:2rem !important;
 		position:fixed !important;
 		bottom: 0 !important;
 		z-index: 999;
-		transform: translate(0%, 950%) !important;
-		background: #053803;
-		background-image:url(../pics/arrows.png);
-		background-repeat: no-repeat;
+		transform: translate(10%, 950%) !important;
+		background: linear-gradient(135deg, #759e06 0%, #a5c667 100%);
 		background-position: 10px,10px;
-		background-size: contain; 
-		
+		clip-path: polygon(
+			0% 0%,           /* Vértice superior de la punta */
+			85% 35%,         /* Curva hacia la parte trasera */
+			90% 50%,         /* Punto medio trasero */
+			85% 65%,         /* Curva inferior hacia la punta */
+			0% 100%          /* Vértice inferior de la punta */
+		);
+		border-radius: 20%;
 	}
 	
 
@@ -875,7 +921,7 @@ video{
 	.magazine-viewport {
 		
 		width: 50rem !important;
-		border: 3px solid #1d751a;
+		/* border: 3px solid #1d751a; */
 		position: absolute;
 		inset: 0; /* Esto establece top, right, bottom y left en 0 */
 		margin: auto; /* Centra el elemento automáticamente */
@@ -888,7 +934,6 @@ video{
         left: 20% !important;
 		
 	} 
-
 
 
 	.flechas{
@@ -907,7 +952,6 @@ video{
 }
 
 
-
 @media(max-width:600px){
 	.flechas{
 		display: none;
@@ -920,8 +964,6 @@ video{
 		display: none;
 	}
 }
-
-
 
 
 
