--- a/css/magazine.css
+++ b/css/magazine.css
@@ -6,6 +6,9 @@
     font-style: normal;
 }
 
+:root{
+	--alto-revista: 800px;
+}
 body{
 	/* overflow:hidden; */
 	overflow-x: hidden;
@@ -64,7 +67,7 @@ body{
 
 }
 
-.ciculoColor { 
+.circuloColor { 
     width: 110px;
     height: 110px;
     z-index: -1;
@@ -75,8 +78,8 @@ body{
     border-radius: 50%;
     top: 0;
     margin-top: 11px;
-    background: linear-gradient(45deg, #053803 0%, #bedd0d 100%);
     background-size: 200% 200%; /* Para que el gradiente se mueva */
+    background: linear-gradient(45deg, #053803 10%, #bedd0d 100%);
     animation: rotateGradient 4s linear infinite, moveGradient 8s ease-in-out infinite;
 }
 
@@ -173,6 +176,41 @@ body{
 	margin-right: auto;
 	user-select: none;
 } */
+
+.redes{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	user-select: none; 
+}
+.redes a img{
+	width: 2rem;
+	margin-top: .5rem;
+	margin-right: 0.4rem;
+	margin-left: 0.4rem;
+
+}
+.redes a {
+    position: relative; 
+    display: inline-block; 
+}
+
+.redes a::before {
+    content: ""; 
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 2.5rem; 
+    height: 2.5rem; 
+    background: linear-gradient(45deg, #053803 10%, #bedd0d 100%);
+    animation: rotateGradient 4s linear infinite, moveGradient 8s ease-in-out infinite;
+    border-radius: 50%; 
+    z-index: -1; 
+}
+
+
+
 .description{
 	font-size: 0.9rem;
 	user-select: none;
@@ -219,6 +257,7 @@ body{
 	bottom: 0;
 	margin-bottom: 1rem;
 	width: 100%;
+	user-select: none; 
 }
 .contactoMenu li{
 	/* width: 12rem; */
@@ -250,6 +289,7 @@ body{
 	height: 18rem;
 	top: 50%;
 	transform: translateY(-50%);
+	user-select: none; 
 }
 .wp, .tel, .cv {
 	position: fixed;
@@ -403,6 +443,7 @@ video{
 	width:922px;
 	height:600px;
 	margin:auto;
+	
 }
 
 .magazine-viewport .magazine{
@@ -550,10 +591,10 @@ video{
 .magazine-viewport .next-button,
 .magazine-viewport .previous-button{
 	width:22px;
-	height:600px;
+	height:var(--alto-revista);
 	position:absolute;
 	top:0;
-	
+	z-index: 3;
 }
 
 
@@ -585,26 +626,26 @@ video{
 
 .magazine-viewport .previous-button-hover,
 .magazine-viewport .next-button-hover{
-	background-color: rgba(136, 230, 14, 0.11);
+	background-color: #55b955;
 	
 }
 
 .magazine-viewport .previous-button-hover,
 .magazine-viewport .previous-button-down{
 	background-image:url(../pics/arrows.png);
-	background-position:-4px 284px;
+	background-position:-4px 400px;
 	background-repeat:no-repeat;
 }
 
-.magazine-viewport .previous-button-down,
+/* .magazine-viewport .previous-button-down,
 .magazine-viewport .next-button-down{
 	background-color:rgba(0,0,0, 0.4);
-}
+} */
 
 .magazine-viewport .next-button-hover,
 .magazine-viewport .next-button-down{
 	background-image:url(../pics/arrows.png);
-	background-position:-38px 284px;
+	background-position:-38px 400px;
 	background-repeat:no-repeat;
 }
 
@@ -813,13 +854,13 @@ video{
 
 .flechas{
 	position: absolute;
-	top: 10%;
+	top: 0%;
 	left: 50%;
 	transform: translate(-50%, 50%);
 	z-index: 99;
 	width: 50px;
 	opacity: 0.8;
-	
+	user-select: none; 
 }
 
 
@@ -1056,7 +1097,7 @@ video{
 	position: absolute;
 	top: 0;
 	left: 0;
-	background: linear-gradient(to right, #2c2d2e, var(--primario), #2c2d2e);
+	background: linear-gradient(to right, #2c2d2e, #2c702c, #2c2d2e);
 	z-index: 99999999 !important;
 	height: 100%;
 	width: 100%;
@@ -1066,6 +1107,7 @@ video{
 	align-items: center;
 	justify-content: center;
 	color: #191654;
+	user-select: none; 
   }
   
   #svg {
